#3 Fixed Hero height issue on mobile landscape view

--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
-    min-height: 500px;
+    height: 100vh;
     box-shadow: inset 0 0 0 1000px rgba(theme-color(), 0.5);
     text-align: center;
     overflow: hidden;
@@ -17,7 +17,6 @@
     align-items: center;
     position: relative;
 
-    // :global(.banner)
     .children {
         width: 85%;
     }
@@ -33,7 +32,6 @@
         );
 
         position: absolute;
-        margin-left: -($size / 2);
         bottom: $size / 2;
 
         @include media('<=tablet') {
